--- a/app/src/main/res/layout/activity_add_meeting.xml
+++ b/app/src/main/res/layout/activity_add_meeting.xml
@@ -65,7 +65,8 @@
         app:layout_constraintTop_toBottomOf="@id/meetingHour"
         app:layout_constraintStart_toStartOf="parent"
         android:hint="@string/select_your_guests_emails"
-        android:layout_margin="20dp"
+       android:inputType="textEmailAddress"
+       android:layout_margin="20dp"
         />
    <Button
         android:id="@+id/validateMeetingBtn"
