--- a/app/src/main/res/layout/activity_list_meeting.xml
+++ b/app/src/main/res/layout/activity_list_meeting.xml
@@ -13,7 +13,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/list_items">
+
     </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -23,7 +25,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:clickable="true"
-        app:srcCompat="@drawable/ic_baseline_add_circle_24"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:backgroundTint="#FF0330"
         android:focusable="true"
         android:layout_margin="20dp"
         />
