--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -4,67 +4,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="20dp">
 
-    <TextView
-        android:id="@+id/subject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/avatar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/subject"
-        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_baseline_brightness_1_24"
         />
 
     <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
+        android:id="@+id/meetingInfos"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/subject"
+        app:layout_constraintStart_toEndOf="@id/avatar"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/date"
-        android:layout_margin="10dp"
-        />
-
-    <TextView
-        android:id="@+id/hour"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/date"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/hour"
-        android:layout_margin="10dp"
-        />
-
-    <TextView
-        android:id="@+id/room"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/hour"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/room"
-        android:layout_margin="10dp"
+        app:layout_constraintEnd_toStartOf="@id/deleteMeeting"
+        android:text="@string/subject_hour_room"
+        android:textStyle="bold"
+        android:layout_margin="5dp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textSize="15sp"
         />
 
     <TextView
         android:id="@+id/guests"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/subject"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/meetingInfos"
+        app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintEnd_toStartOf="@id/deleteMeeting"
         android:text="@string/guests"
-        android:layout_margin="10dp"
+        android:textStyle="italic"
+        android:layout_margin="5dp"
+        android:maxLines="1"
+        android:ellipsize="end"
         />
 
     <ImageButton
         android:id="@+id/deleteMeeting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:src="@drawable/ic_baseline_delete_24"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="5dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
