--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <item
         android:id="@+id/filterRoom"
-        app:showAsAction="never"
-        android:title="@string/filter_by_room"/>
+        android:title="@string/filter_by_room"
+        app:showAsAction="never">
+
+        <menu>
+            <item
+                android:id="@+id/mario"
+                android:title="Mario" />
+            <item
+                android:id="@+id/peach"
+                android:title="Peach" />
+            <item
+                android:id="@+id/yoshi"
+                android:title="Yoshi" />
+        </menu>
+
+    </item>
 
     <item
         android:id="@+id/filterDate"
-        app:showAsAction="never"
-        android:title="@string/filter_by_date"/>
+        android:title="@string/filter_by_date"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/cancel"
-        app:showAsAction="never"
-        android:title="@string/show_all_meetings"/>
+        android:title="@string/show_all_meetings"
+        app:showAsAction="never" />
 
 </menu>
